Fixed loader size on smaller devices

--- a/studio-ghibli/styles.css
+++ b/studio-ghibli/styles.css
@@ -143,6 +143,12 @@ strong {
   }
 }
 
+@media only screen and (max-width: 500px) {
+  #loader img {
+    width: 85%;
+  }
+}
+
 @media only screen and (min-width: 900px) {
   main {
     display: grid;
